Added flags and language activity layout. Showing dialog when choosing languages

--- a/app/src/main/res/drawable/button_unfocused.xml
+++ b/app/src/main/res/drawable/button_unfocused.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#7883c2" />
+        android:color="@color/mainBlue" />
     <corners android:radius="25dp" />
 
     <!--<solid android:color="#0000000" />-->
