--- a/app/src/main/res/layout/activity_languages.xml
+++ b/app/src/main/res/layout/activity_languages.xml
@@ -3,29 +3,190 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="30dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.olebokolo.wordstack.activities.LanguagesActivity">
 
-    <RelativeLayout
-        android:layout_alignParentBottom="true"
+    <!-- TOOLBAR WRAPPER -->
+    <LinearLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="30dp">
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/go_next_button"
-            android:padding="15dp"
-            android:background="@drawable/rounded_button"
-            android:textColor="#7883c2"
-            android:textAllCaps="true"
-            android:textSize="18sp"
-            android:text="Let's start"
+        <!-- TOOLBAR -->
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp" />
+            android:layout_height="56dp"
+            android:paddingLeft="18dp"
+            android:paddingRight="18dp"
+            android:paddingTop="5dp">
+
+            <!-- TITLE -->
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Choose languages"
+                android:textAllCaps="true"
+                android:textColor="@color/mainBlue"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <!-- SHADOW -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/mainBlue" />
+
+    </LinearLayout>
+
+    <!-- LAYOUT WRAPPER -->
+    <RelativeLayout
+        android:id="@+id/root_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
+
+        <!-- CONTENT WRAPPER -->
+        <RelativeLayout
+            android:id="@+id/content_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="30dp"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="30dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/front_lang_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="30dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/front_lang_icon"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:src="@drawable/flag_en"
+                        app:civ_border_color="@color/mainBlue"
+                        app:civ_border_overlay="true"
+                        app:civ_border_width="2dp" />
+
+                    <LinearLayout
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="I speak"
+                            android:textAllCaps="true"
+                            android:textColor="@color/mainBlue"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/front_lang_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="English"
+                            android:textAllCaps="true"
+                            android:textColor="@color/mainBlue"
+                            android:textSize="25sp"
+                            android:textStyle="bold"/>
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/back_lang_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="30dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/back_lang_icon"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:src="@drawable/flag_fr"
+                        app:civ_border_color="@color/mainBlue"
+                        app:civ_border_overlay="true"
+                        app:civ_border_width="2dp" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="I learn"
+                            android:textAllCaps="true"
+                            android:textColor="@color/mainBlue"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/back_lang_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="French"
+                            android:textAllCaps="true"
+                            android:textColor="@color/mainBlue"
+                            android:textSize="25sp"
+                            android:textStyle="bold"/>
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <!-- BOTTOM -->
+            <RelativeLayout
+                android:id="@+id/bottom_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:padding="30dp">
+
+                <!-- NEXT BUTTON -->
+                <Button
+                    android:id="@+id/go_next_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="@drawable/button_rounded"
+                    android:padding="15dp"
+                    android:text="Let's start"
+                    android:textAllCaps="true"
+                    android:textColor="@color/mainBlue"
+                    android:textSize="18sp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
