--- a/app/src/main/res/layout/activity_languages.xml
+++ b/app/src/main/res/layout/activity_languages.xml
@@ -73,10 +73,10 @@
                     android:layout_marginTop="30dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/front_lang_icon"
+                        android:id="@+id/lang_icon"
                         android:layout_width="55dp"
                         android:layout_height="55dp"
-                        android:src="@drawable/flag_en"
+                        tools:src="@drawable/flag_en"
                         app:civ_border_color="@color/mainBlue"
                         app:civ_border_overlay="true"
                         app:civ_border_width="2dp" />
@@ -98,10 +98,10 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/front_lang_name"
+                            android:id="@+id/lang_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="English"
+                            tools:text="English"
                             android:textAllCaps="true"
                             android:textColor="@color/mainBlue"
                             android:textSize="25sp"
@@ -121,10 +121,10 @@
                     android:layout_marginTop="30dp">
 
                     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/back_lang_icon"
+                        android:id="@id/lang_icon"
                         android:layout_width="55dp"
                         android:layout_height="55dp"
-                        android:src="@drawable/flag_fr"
+                        tools:src="@drawable/flag_fr"
                         app:civ_border_color="@color/mainBlue"
                         app:civ_border_overlay="true"
                         app:civ_border_width="2dp" />
@@ -146,10 +146,10 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/back_lang_name"
+                            android:id="@id/lang_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="French"
+                            tools:text="French"
                             android:textAllCaps="true"
                             android:textColor="@color/mainBlue"
                             android:textSize="25sp"
