--- a/app/src/main/res/layout/activity_languages.xml
+++ b/app/src/main/res/layout/activity_languages.xml
@@ -13,26 +13,48 @@
         android:orientation="vertical">
 
         <!-- TOOLBAR -->
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:paddingLeft="18dp"
-            android:paddingRight="18dp"
-            android:paddingTop="5dp">
+            android:layout_height="56dp">
 
-            <!-- TITLE -->
-            <TextView
-                android:id="@+id/toolbar_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="Choose languages"
-                android:textAllCaps="true"
-                android:textColor="@color/mainBlue"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            <!-- BACK BUTTON WRAPPER -->
+            <LinearLayout
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
+                android:id="@+id/back_toolbar_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingBottom="5dp"
+                android:paddingLeft="18dp"
+                android:paddingRight="18dp"
+                android:paddingTop="5dp">
 
-        </RelativeLayout>
+                <!-- BACK ARROW -->
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="-10dp"
+                    android:layout_marginRight="5dp"
+                    android:src="@drawable/c_arrow_left_blue" />
+
+                <!-- TITLE -->
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Choose languages"
+                    android:textAllCaps="true"
+                    android:textColor="@color/mainBlue"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <!-- SHADOW -->
         <View
