--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.olebokolo.wordstack.presentation.activities.SettingsActivity">
+
 
     <!-- TOOLBAR WRAPPER -->
     <LinearLayout
@@ -19,23 +21,25 @@
 
             <!-- BACK BUTTON WRAPPER -->
             <LinearLayout
+                android:clickable="true"
+                android:background="?attr/selectableItemBackground"
                 android:id="@+id/back_toolbar_button"
-                android:paddingTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
                 android:paddingBottom="5dp"
                 android:paddingLeft="18dp"
                 android:paddingRight="18dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:paddingTop="5dp">
 
                 <!-- BACK ARROW -->
                 <ImageView
-                    android:layout_marginLeft="-10dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/c_arrow_left_blue"
                     android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="-10dp"
                     android:layout_marginRight="5dp"
-                    android:layout_height="30dp" />
+                    android:src="@drawable/c_arrow_left_blue" />
 
                 <!-- TITLE -->
                 <TextView
@@ -62,4 +66,103 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+    <!-- LAYOUT WRAPPER -->
+    <RelativeLayout
+        android:id="@+id/root_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- CONTENT WRAPPER -->
+        <RelativeLayout
+            android:id="@+id/content_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="30dp"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <!-- SCROLLED SETTINGS LIST -->
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <!-- SETTINGS LIST WRAPPER -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- LANGUAGES SETTINGS -->
+                    <LinearLayout
+                        android:id="@+id/languages_settings"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:clickable="true"
+                        android:background="?attr/selectableItemBackground"
+                        android:padding="10dp"
+                        android:gravity="center_vertical">
+
+                        <!-- LANGUAGES ICON -->
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:padding="3dp"
+                            android:layout_marginRight="25dp"
+                            android:layout_marginEnd="25dp"
+                            android:alpha="0.8"
+                            android:src="@drawable/c_translate_blue" />
+
+                        <!-- LANGUAGES TITLE -->
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:text="Languages"
+                            android:textAllCaps="false"
+                            android:textColor="@color/mainBlue"
+                            android:textStyle="bold"
+                            android:textSize="20sp" />
+
+                        <!-- ICONS LAYOUT -->
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <!-- FRONT LANGUAGE -->
+                            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                                android:id="@+id/front_lang_icon"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_margin="10dp"
+                                tools:src="@drawable/flag_en"
+                                app:civ_border_color="@color/mainBlue"
+                                app:civ_border_overlay="true"
+                                app:civ_border_width="2dp" />
+
+                            <!-- BACK LANGUAGE -->
+                            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                                android:id="@+id/back_lang_icon"
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                tools:src="@drawable/flag_fr"
+                                app:civ_border_color="@color/mainBlue"
+                                app:civ_border_overlay="true"
+                                app:civ_border_width="2dp" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </ScrollView>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+</LinearLayout>
