--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#eee</color>
     <color name="colorPrimaryDark">@color/mainBlue</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--<color name="colorAccent">#FF4081</color>-->
+    <color name="colorAccent">@color/mainBlue</color>
 
     <color name="mainBlue">#425273</color>
 </resources>
