--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,31 +15,67 @@
         android:orientation="vertical">
 
         <!-- TOOLBAR -->
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:paddingLeft="18dp"
-            android:paddingRight="18dp"
-            android:paddingTop="5dp">
+            android:paddingStart="18dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <!-- TITLE -->
             <TextView
                 android:id="@+id/toolbar_title"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:text="WordStack"
                 android:textAllCaps="true"
                 android:textColor="@color/mainBlue"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-        </RelativeLayout>
+            <!-- SELECTED LANGUAGES -->
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|end"
+                android:layout_marginRight="18dp"
+                android:layout_marginEnd="18dp"
+                android:orientation="horizontal">
+
+                <!-- FRONT LANGUAGE -->
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/front_lang_icon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
+                    tools:src="@drawable/flag_en"
+                    app:civ_border_color="@color/mainBlue"
+                    app:civ_border_overlay="true"
+                    app:civ_border_width="0.5dp" />
+
+                <!-- BACK LANGUAGE -->
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/back_lang_icon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    tools:src="@drawable/flag_fr"
+                    app:civ_border_color="@color/mainBlue"
+                    app:civ_border_overlay="true"
+                    app:civ_border_width="0.5dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <!-- SHADOW -->
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:background="@color/mainBlue" />
 
     </LinearLayout>
