--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/root_layout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -61,7 +62,7 @@
         <!-- SHADOW -->
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:background="@color/mainBlue" />
 
     </LinearLayout>
@@ -141,7 +142,7 @@
                                 tools:src="@drawable/flag_en"
                                 app:civ_border_color="@color/mainBlue"
                                 app:civ_border_overlay="true"
-                                app:civ_border_width="2dp" />
+                                app:civ_border_width="0.5dp" />
 
                             <!-- BACK LANGUAGE -->
                             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -151,7 +152,7 @@
                                 tools:src="@drawable/flag_fr"
                                 app:civ_border_color="@color/mainBlue"
                                 app:civ_border_overlay="true"
-                                app:civ_border_width="2dp" />
+                                app:civ_border_width="0.5dp" />
 
                         </LinearLayout>
 
