--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -104,7 +104,7 @@
                 android:layout_alignParentBottom="true"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="30dp">
+                android:padding="15dp">
 
                 <!-- PRACTICE BUTTON -->
                 <Button
@@ -117,6 +117,8 @@
                     android:textAllCaps="true"
                     android:textColor="@color/mainBlue"
                     android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:textSize="18sp" />
 
                 <!-- EDIT STACKS BUTTON -->
@@ -130,6 +132,8 @@
                     android:textAllCaps="true"
                     android:textColor="@color/mainBlue"
                     android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:textSize="18sp" />
 
                 <!-- SETTINGS BUTTON -->
@@ -142,6 +146,9 @@
                     android:text="Settings"
                     android:textAllCaps="true"
                     android:textColor="@color/mainBlue"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:textSize="18sp" />
 
             </LinearLayout>
