--- a/app/src/main/res/layout/activity_stack_list.xml
+++ b/app/src/main/res/layout/activity_stack_list.xml
@@ -19,6 +19,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:background="@color/mainBlue"
             android:orientation="horizontal">
 
             <!-- BACK BUTTON WRAPPER -->
@@ -41,7 +42,7 @@
                     android:layout_gravity="center"
                     android:layout_marginLeft="-10dp"
                     android:layout_marginRight="5dp"
-                    android:src="@drawable/c_arrow_left_blue" />
+                    android:src="@drawable/c_arrow_left_white" />
 
                 <!-- TITLE -->
                 <TextView
@@ -51,7 +52,7 @@
                     android:layout_gravity="center_vertical"
                     android:text="Stacks"
                     android:textAllCaps="true"
-                    android:textColor="@color/mainBlue"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -69,26 +70,27 @@
                 android:orientation="horizontal">
 
                 <!-- FRONT LANGUAGE -->
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/front_lang_icon"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginEnd="10dp"
                     tools:src="@drawable/flag_en"
-                    app:civ_border_color="@color/mainBlue"
+                    app:civ_border_color="#ddd"
                     app:civ_border_overlay="true"
-                    app:civ_border_width="0.5dp" />
+                    app:civ_border_width="2dp" />
 
                 <!-- BACK LANGUAGE -->
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_toRightOf="@id/front_lang_icon"
                     android:id="@+id/back_lang_icon"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     tools:src="@drawable/flag_fr"
-                    app:civ_border_color="@color/mainBlue"
+                    app:civ_border_color="#ddd"
                     app:civ_border_overlay="true"
-                    app:civ_border_width="0.5dp" />
+                    app:civ_border_width="2dp" />
 
             </LinearLayout>
 
@@ -98,7 +100,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/mainBlue" />
+            android:background="@color/cardview_dark_background" />
 
     </LinearLayout>
 
@@ -113,10 +115,14 @@
             android:id="@+id/stack_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/item_stack">
+            tools:listitem="@layout/item_stack"
+            android:paddingBottom="230dp"
+            android:clipToPadding="false"
+            android:scrollbarStyle="outsideOverlay">
         </ListView>
 
         <!-- CONTENT WRAPPER -->
+
         <RelativeLayout
             android:id="@+id/content_wrapper"
             android:layout_width="match_parent"
