--- a/app/src/main/res/layout/dialog_stack_add.xml
+++ b/app/src/main/res/layout/dialog_stack_add.xml
@@ -1,50 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/root_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/dialog_body"
         android:layout_width="300dp"
-        android:layout_height="200dp"
-        card_view:cardCornerRadius="5dp">
+        android:layout_height="wrap_content">
 
         <!-- RELATIVE WRAPPER -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <!-- CONTENT WRAPPER -->
             <LinearLayout
+                android:id="@+id/dialog_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="15dp"
-                android:orientation="vertical">
+                android:layout_height="50dp"
+                android:background="@color/mainBlue"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="15dp">
 
                 <!-- TITLE -->
                 <TextView
                     android:id="@+id/dialog_title"
-                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="New stack"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textAllCaps="true"
-                    android:textColor="@color/mainBlue"
-                    android:textSize="18sp"
+                    android:textColor="#fff"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
+                <!-- CLOSE BUTTON -->
+                <ImageView
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:id="@+id/close_button"
+                    android:src="@drawable/c_close_white"
+                    android:layout_margin="3dp"
+                    android:padding="8dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
+
+            </LinearLayout>
+
+            <!-- CONTENT WRAPPER -->
+            <LinearLayout
+                android:layout_below="@+id/dialog_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:orientation="vertical">
+
                 <LinearLayout
-                    android:focusableInTouchMode="true"
+                    android:id="@+id/stack_name_layout"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true">
 
                     <android.support.design.widget.TextInputLayout
-                        android:focusableInTouchMode="true"
-                        android:id="@+id/stack_name_layout"
-                        android:layout_marginTop="20dp"
                         android:textColorHint="@color/mainBlue"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -56,6 +78,7 @@
                             android:textColor="@color/mainBlue"
                             android:inputType="textCapWords"
                             android:textColorHint="@color/mainBlue"
+                            tools:text="Basic words"
                             android:hint="Stack name" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -63,6 +86,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_marginTop="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end">
@@ -102,19 +126,6 @@
                 </LinearLayout>
 
             </LinearLayout>
-
-            <!-- CLOSE BUTTON -->
-            <ImageView
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:id="@+id/close_button"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/c_close"
-                android:layout_margin="7dp"
-                android:padding="8dp"
-                android:layout_width="40dp"
-                android:layout_height="40dp" />
 
         </RelativeLayout>
 
